--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,8 @@
 body{
 	background-color: #e4e4e4; 
 }
-#home{
-	padding-left: 3%;
-	padding-right: 3%;
-
+#home {
+  width: 100%;
 }
 #calcList {
 	border-radius: 0px;
@@ -13,7 +11,10 @@ body{
 	-moz-border-radius: 0px;
 	box-shadow: none;
 }
-
+.ui-content {
+  padding-left: 30px;
+  padding-right: 30px;
+}
 .loadCalc {
 	background: ;
 	min-height: 50px;
@@ -23,7 +24,6 @@ body{
 	border-radius: 0px;
 	-webkit-border-radius: 0px;
 	-moz-border-radius: 0px;
-	max-width: 94%;
 }
 
 .ui-input-search{
@@ -227,11 +227,7 @@ div.ui-slider{
   background-color: #615a95;
   background-image: none;
 }
-.cont{
-  padding-left:3%;
-  padding-top:2%;
-  width: 94%;
-}
+
 .clear-20{
   width: 100%;
   height: 20px;
@@ -249,7 +245,9 @@ div.ui-slider{
   padding-top: 15px;
 }
 
-
+#fieldList .ui-listview {
+  margin: 0 !important;
+}
 
 
 .topbar2 {
@@ -282,9 +280,7 @@ div.ui-slider{
   position: relative;
   display: block;
   margin:auto;
-  margin-top:-10px;
   padding-top:20px;
-  padding-left: 3%;
 
     width: 100%;
     height:80px;
@@ -334,7 +330,6 @@ div.ui-slider{
 #beforeShow{
   background-color:#fff;
   margin-top:30px;
-  width: 99%;
   height: 50px;
   padding-top: 5px;
   border: 2px solid #615a95;
@@ -343,7 +338,6 @@ div.ui-slider{
 #resultBox{
   background-color:#fff;
   margin-top:30px;
-  width: 100%;
   height: 50px;
   padding-top: 5px;
   border: 2px solid #615a95;
