--- a/css/style.css
+++ b/css/style.css
@@ -75,14 +75,14 @@ p{
 .featured{
   margin-top:-15px;
   margin-left:10px;
-  background-image: url('http://i.imgur.com/9hMLTvg.png');
+  background-image: url('../img/trophy.png');
   width:32px;
   height:32px;
 } 
 .starred{
   margin-top:-33px;
   margin-left:130px;
-  background-image: url('http://i.imgur.com/W7l1PyG.png');
+  background-image: url('../img/star.png');
   width:32px;
   height:32px;
   
